# blue-loader-python

./: .buildinfo  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  VERSIONING.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  ruff.toml  script_reference.html  scripts.html  search.html  searchindex.js  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  documentation.yml
_sources/: scripts.rst.txt
_static/: documentation_options.js
doc/: Makefile  README.md  requirements.txt
doc/source/: conf.py  index.rst  script_reference.rst
experimental/bluepy/: commBLE.py
ledgerblue/: BleComm.py  BlueHSMServer_pb2.py  Dongle.py  HowToRecover.md  __init__.py  checkGenuine.py  checkGenuineRemote.py  comm.py  commException.py  commHTTP.py  commTCP.py  commU2F.py  debugApp.py  deleteApp.py  deployed.py  derivePassphrase.py  ecWrapper.py  endorsementSetup.py  endorsementSetupLedger.py  endorsementSetupLedger2.py  genCAPair.py  getMemInfo.py  hashApp.py  hexLoader.py  hexParser.py  hostOnboard.py  ledgerWrapper.py  listApps.py  loadApp.py  loadMCU.py  mcuBootloader.py  nfcTagUpdate.py  readElfMetadata.py  recoverBackup.py  recoverDeleteBackup.py  recoverDeleteCA.py  recoverMutualAuth.py  recoverRestore.py  recoverSCP.py  recoverSetCA.py  (+12 more)
tests/: conftest.py  test_hex_loader.py  test_hex_parser.py  test_load_app.py  test_smoke.py
tests/fixtures/: ref_curve_bls12381g1.apdu  ref_curve_ed25519.apdu  ref_curve_secp256k1.apdu  ref_curve_secp256r1.apdu  ref_delete.apdu  ref_dep_no_version.apdu  ref_dep_with_version.apdu  ref_empty_path.apdu  ref_icon.apdu  ref_installparams_size.apdu  ref_nocrc.apdu  ref_path.apdu  ref_signature.apdu  ref_slip21.apdu  ref_slip21_no_bip32_path.apdu  ref_tlvraw.apdu
